workbench/0.2.0/draft/spec/17-memo-store.md
# 17. .memo/

| | |
|---|---|
| Status | Draft |
| Depends on | [11-project-structure.md](./11-project-structure.md), [12-folders.md](./12-folders.md) |
| Related | [26-addons.md](./26-addons.md), [06-memo-structure.md](/specification/memo-structure/), [02-memo-sop-entrypoint.md](/specification/memo-sop-entrypoint/) |

`.memo/` is the on-disk footprint of the **memo system** — an Add-on (a custom folder) generated by `memo-init`, and the recommended default mode of working ([26-addons.md](./26-addons.md)). This is the per-folder page for `.memo/`: it specifies the folder's *role* and *top-level layout* in the workbench. The memo *lifecycle* — input, revisions, questions, phases, rollout — is the subject of the core specification ([06-memo-structure.md](/specification/memo-structure/)) and is not restated here.

---

## Folder Contract

```folder
{
  "name":       ".memo/",
  "status":     "reserved-default-on",
  "level":      "project",
  "entryPoint": "config.json + memos/",
  "convention": null,
  "purpose":    "The memo system's footprint, generated by memo-init — memos and the shared stores they draw on.",
  "goesIn":     "Memos under memos/<NNN-slug>/ and the shared stores (_requirements/, _references/, chronic/, plans/, …).",
  "doesNot":    "Project code (that belongs in repos/); .memo/ never carries a git remote.",
  "git":        "discouraged",
  "remote":     "forbidden"
}
```

> The Folder Contract is the machine-readable ` ```folder ` block defined in the session conventions ([session/13-conventions.md](/session/conventions/)) — the authored source this folder's row in the central registry ([12-folders.md](./12-folders.md)) and the derived project config are generated from. Outside `repos/` no remote may be attached, so `remote` is `forbidden` and a local, own git is `discouraged`.

---

## The Footprint of a Custom Folder

`.memo/` is the data area the memo-system custom folder reserves in a project — generated by `memo-init`, in the pattern every custom folder follows: the tool is provided globally, and its per-project working data is written under a declared folder ([26-addons.md](./26-addons.md)). Its dot prefix marks it as generated, local machinery — and because the project root confines remotes to `repos/`, `.memo/` **never carries a git remote** and its contents never leave the machine ([11-project-structure.md](./11-project-structure.md)). The memo system is the recommended default, which is why a real project almost always carries `.memo/`; the workbench *core*, however, does not depend on it ([12-folders.md](./12-folders.md)). In the folder contract `.memo/` is therefore listed as **reserved (custom folder, default-on)** — present by default, but a reservation of the memo custom folder rather than a bare-workbench requirement ([12-folders.md](./12-folders.md)).

---

## Top-Level Layout

`.memo/` separates the **memos** from the **shared stores** they draw on. Memos live under `.memo/memos/`, one directory per memo; the stores sit directly under `.memo/`, independent of any single memo:

| Path | Holds |
|------|-------|
| `memos/<NNN-slug>/` | One memo each — its revisions, topics, context, transcripts, validation, and rollout working files. |
| `_requirements/` | The requirements store — registry, schema, and reports. |
| `_references/` | Shared reference material cited across memos. |
| `transcripts/` | Staged input transcripts before they become a memo or a revision. |
| `chronic/` | The narrated chronicle — a flat, append-only record across memos. |
| `plans/` | Plans, each composed of one or more finalized memos. |
| `strands/` | Emergent cross-memo strands. |
| `_archive/` | Frozen legacy material that predates the current numbering. |
| `config.json` | The project's memo configuration, including its branch/ID prefix. |

The canonical layout places memos under `.memo/memos/<NNN-slug>/`; a flat legacy layout (`<NNN-slug>/` directly under `.memo/`) **MAY** still be read for backward compatibility but is not the target for new memos.

---


<!-- IMPLEMENTED-BY — rendered backlink lives in the dist (generated/bridge/<family>/<stem>.backlink.md); source stays authored-only (F2 Dist-Split) -->
## Related

- [26-addons.md](./26-addons.md) — the custom folder (Add-on) model `.memo/` is an instance of.
- [11-project-structure.md](./11-project-structure.md) — why `.memo/` never carries a git remote.
- [12-folders.md](./12-folders.md) — the folder contract and the core-vs-custom folder split this page is the registered entry for.
- [06-memo-structure.md](/specification/memo-structure/) — the memo structure and lifecycle the core specification owns.
- [02-memo-sop-entrypoint.md](/specification/memo-sop-entrypoint/) — the memo SOP entry point.
